--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -5,7 +5,6 @@ sql:
     schema: "schema.sql"
     gen:
       go:
-        emit_json_tags: true
         emit_pointers_for_null_types: true
         emit_methods_with_db_argument: true
         json_tags_case_style: "camel"
@@ -19,3 +18,10 @@ sql:
             go_type: "time.Time"
           - db_type: "date"
             go_type: "time.Time"
+          - db_type: "timestamp"
+            nullable: true
+            go_type: 
+              type: "time.Time"
+              pointer: true
+
+
